<resources>
    <string name="app_name">e-Kindergarten</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="show_screenshot">Take Screenshot</string>
    <string name="signature_hint">First and last name</string>
    <string name="age_hint">Age</string>
    <string name="signature_label">Insert your signature here</string>
    <string name="cancel_all">Cancel all</string>
    <string name="delete_draw">Delete draw</string>
    <string name="github_hint">Show Git Repository</string>
    <string name="github_url">https://github.com/RiccardoMoro</string>
    <string name="error_opening_url">Error opening link</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>
    <string name="stroke_alpha">Stroke alpha</string>
    <string name="stroke_width">Stroke width</string>
    <string name="random_color">Random color</string>
    <string name="app_description">Guess a Sketch is a companion app for Project for Machine Learning Class in MUM (mum.edu) !\n\nIt\'ll try to guess the sketch you\'re drawing using TensorFlow Inception Engine.\n\n\nHappy painting :)</string>
    <string name="here_is_your_canvas">Here is your canvas. Start to paint!</string>
    <string name="color">Color</string>
    <string name="emboss">Bold</string>
    <string name="blur">Blur</string>
    <string name="brush_size">Brush size</string>
    <string name="erase">Erase</string>
    <string name="clear_all">Erase entire foreground</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="open_image">Open image as background</string>
    <string name="fill_background_with_color">Fill background with color</string>
    <string name="your_selected_size_is">Selected size: %1$s</string>
    <string name="choose_width">Brush size</string>
    <string name="saved_your_location_to">Saved your artwork to %1$s</string>
    <string name="select">Select</string>
    <string name="continue_button">Continue</string>
    <string name="ok">OK</string>
    <string name="pick_color">Pick a Color</string>
    <string name="toolbox_share_title">Share</string>
    <string name="share_title_template">Look at what I painted with Guess a Sketch! --- Guess a Sketch (Simple finger painting)</string>
    <string name="share_text_template">Share as text</string>
    <string name="no_way_to_share">Can\'t locate an app to share with…</string>
    <string name="normal">Pencil</string>
    <string name="title_activity_about">About</string>
    <string name="press_back_again">Press back again to exit!\n(Losing all the unsaved work)</string>
    <string name="about_description">
<![CDATA[
<h1>Guess a Sketch</h1>
<p>Thanks for using Guess a Sketch!<br />A <b>Free and Open Source Software</b> to free your creativity!</p>

<h2>Credits</h2>
<p>Special thanks to:<br>
<b><a href="https://github.com/anupam1525>Anupam Shrivastava</a></b> for the former version of Guess a Sketch. Now he's inactive.<br>
<b><a href="https://github.com/valerio-bozzolan">Valerio Bozzolan</a></b> for the great work done reviewing the source code and optimising it. He currently carries on the work for this version of AcrylicPaint.<br>
<b><a href="https://github.com/marcogagino-22">Marco Gagino</a></b> for the thorough restyling and the great participation!
</p>

<h2>Licenses</h2>
<p>This version of Guess a Sketch and its source code are released by <a href="https://boz.reyboz.it">Valerio Bozzolan</a> under the
terms of the <i>GNU GPLv3+</i> license.
This license gives everyone the ability to use, study, better and share this app by <b>any means</b> and for <b>every purpose</b> as long as you offer these same rights to the others.</p>
<p>This app is distributed <b>in the hope that it will be useful to everyone</b>, but without any warranty; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.</p>

<h2>Note</h2>
<p>If you notice any problem or if you have some ideas feel free to use the <a href="https://github.com/valerio-bozzolan/AcrylicPaint/issues">bug tracker</a>.</p>
<p>Contribute to the source code: <a href="https://github.com/valerio-bozzolan/AcrylicPaint">valerio-bozzolan/AcrylicPaint</a> @GitHub.</p>
<p>Read the <a href="https://github.com/valerio-bozzolan/AcrylicPaint/blob/master/README.md">README</a> file for further information.</p>

<p>Have fun!</p>
    ]]>
    </string>
    <string name="select_image_to_open">Select image to open</string>
    <string name="extract_color">Extract a color</string>
    <string name="color_extracted">New color extracted</string>
    <string name="tap_to_extract_color">Tap anywhere to extract a color</string>
    <string name="ability_disabled_need_newer_api_level">That ability is disabled because it requires a newer Android version (at least API level 17).</string>
    <string name="smudge">Smudge</string>
    <string name="other_label">Other - Please Specify</string>
    <string name="feedback_submitted">Feedback Submitted, Thanks!</string>
    <string name="button_start">Start</string>
    <string name="button_score">Score</string>
    <string name="button_ach">Achievements</string>
    <string name="button_settings">Settings</string>
    <string name="button_about">About</string>
    <string name="versionNumber">Version %s</string>
    <string name="authors">Created by\n\n
    Victor Githinji</string>
    <string name="difficultyError">Must have a difficulty selected</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="snap">Snap</string>
    <string name="clear">Clear</string>
    <string name="detect">Detect</string>
    <string name="not_detected">Not detected</string>
    <string name="sketch_prediction">Detected a %1$s</string>
    <string name="preview_scaled">Preview for Inference: </string>
    <string name="found_digits">Detected = %1$s</string>
    <string name="company_name_prefix">An</string>
    <string name="company_name" translatable="false">AspiraSoft</string>
    <string name="company_name_suffix">App</string>
    <string name="provider" translatable="false">.sfllhkhan95.doodle.utils.provider</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-6293532072634065~6156179621</string>
    <string name="admob_ad_banner_confirmation" translatable="false">ca-app-pub-6293532072634065/1203928393</string>
    <string name="admob_ad_banner_options" translatable="false">ca-app-pub-6293532072634065/3015894701</string>
    <string name="admob_ad_rewarded" translatable="false">ca-app-pub-6293532072634065/2952381497</string>
    <string name="admob_ad_interstitial" translatable="false">ca-app-pub-6293532072634065/4818681834</string>
    <string name="privacy_policy_url" translatable="false">https://www.iubenda.com/privacy-policy/35502767</string>
    <string name="url_doodle" translatable="false">https://play.google.com/store/apps/details?id=sfllhkhan95.doodle
  </string>
    <string name="url_doodle_source" translatable="false">https://github.com/saifkhichi96/paint</string>
    <string name="notifications_main_channel_name">Primary notification channel</string>
    <string name="notifications_main_channel_description">This is the main notifications channel.</string>
    <string name="error_unknown">Unknown error. Upgrade application to latest version or contact support if error
    persists.
  </string>
    <string name="error_no_gallery">No Gallery application found.</string>
    <string name="error_no_camera">No Camera application found.</string>
    <string name="confirm_delete_body">This action will permanently delete the project</string>
    <string name="desc_brush_size_icon">Select brush size</string>
    <string name="desc_donated">Thank you for supporting Doodle! Ads will be removed when you launch the app again.
  </string>
    <string name="desc_prompt_save">Changes in your project will be saved, and you can continue editing it later</string>
    <string name="desc_prompt_save_as">Create a copy instead of overwriting existing project</string>
    <string name="desc_prompt_close">All unsaved changes would be discarded</string>
    <string name="desc_prompt_revert">This action will erase all unsaved changes. It cannot be reversed</string>
    <string name="desc_prompt_save_and_close">Save changes before closing</string>
    <string name="desc_prompt_support">Doodle is a free-of-charge, open-source project. Our team is hard at work to bring
    you the best product. Minimal ads are the only income source from this app. You can support Doodle by reviewing it
    on Play Store, contributing to its source, or donating a one-time amount to remove all ads from the app.
  </string>
    <string name="desc_prompt_supported">Thank you for supporting Doodle! Doodle is a free-of-charge, open-source project.
    Our team is hard at work to bring you the best product. You can support Doodle by reviewing it on Play Store or
    contributing to its source.
  </string>
    <string name="desc_prompt_exit">Come back soon.\nHappy Doodling!</string>
    <string name="desc_support_review">Your feedback helps us serve you better</string>
    <string name="desc_support_contribute">This open-source project welcomes contributions to its source code and
    documentation
  </string>
    <string name="desc_support_donate">All in-app ads will be removed if you choose to make this donation</string>
    <string name="label_blank">Blank Project</string>
    <string name="label_camera">Camera</string>
    <string name="label_close">Close</string>
    <string name="label_delete">Delete</string>
    <string name="label_exit">Exit</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_save_and_close">Save &amp; Close</string>
    <string name="label_support_contribute">Contribute</string>
    <string name="label_support_donate">Donate</string>
    <string name="label_support_review">Review</string>
    <string name="title_faqs">Doodle FAQs</string>
    <string name="title_privacy">Privacy Policy</string>
    <string name="title_settings">Settings</string>
    <string name="settings_item_help">Get Help</string>
    <string name="settings_item_privacy">See Privacy Policy</string>
    <string name="settings_item_support">Support Us</string>
    <string name="settings_item_theme">Choose Theme</string>
    <string name="settings_item_intro">See Intro</string>
    <string name="settings_item_locale">Set Language</string>
    <string name="menu_action_layers">Layers</string>
    <string name="menu_action_redo">Redo</string>
    <string name="menu_action_revert">Revert</string>
    <string name="menu_action_save">Save</string>
    <string name="menu_action_save_as">Save As</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_share">Share</string>
    <string name="menu_action_undo">Undo</string>
    <string name="menu_tools_box">Box</string>
    <string name="menu_tools_canvas">Canvas Color</string>
    <string name="menu_tools_circle">Circle</string>
    <string name="menu_tools_color_fill">Fill Color</string>
    <string name="menu_tools_color_stroke">Pen Color</string>
</resources>